# eeg-focus-tracker

./: .gitignore  README.en.md  README.md  pyproject.toml  requirements-live.txt  requirements.txt
.streamlit/: config.toml
app/: streamlit-app.py
app/demo/: demo_recording.py  replay.py
models/: feature_names.pkl  focus_model.pkl  scaler.pkl
notebooks/: 01_preprocessing.ipynb  02_exploratory.ipynb  02_exploratory_en.ipynb  03_modeling.ipynb  03_modeling_en.ipynb  eeg_data.csv  eeg_exploration.ipynb  summary.csv
src/: preprocessing.py
src/eeg_focus_tracker/data_collection/: data_recording.py  preprocessing.py
src/eeg_focus_tracker/realtime_inference/: realtime_pipeline.py  shared_state.py  state.json
src/eeg_focus_tracker/training/: model.py
