[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "eeg-focus-tracker"
version = "0.1.0"
description = "EEG focus tracking app"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "streamlit",
    "numpy",
    "pandas",
    "scikit-learn"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]